@@ -25,18 +25,12 @@
 #define TOLERANCE (1e-5)
 
 static float
-dummy (float a)
-{
-  return a;
-}
-
-static float
-neg (float a)
+neg (float a) _FLOAT_FUNC_REENTRANT
 {
   return -a;
 }
 
-typedef float (*float_test_func)(float) __reentrant;
+typedef float (*float_test_func)(float) _FLOAT_FUNC_REENTRANT;
 
 #if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
 
@@ -44,129 +38,109 @@ typedef float (*float_test_func)(float) __reentrant;
    For most 8-bitters each testpoint uses 14 bytes so we could have a few:) */
 struct
 {
+#ifdef _FLOAT_NON_REENTRANT
+    void *f;
+#else
     float_test_func f;
+#endif
     float arg, result, tolerance;
 }
 
 static const testpoint[] =
 {
-
     #if SINF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC sinf
     { sinf,       1.0,                    0.841470984,    TOLERANCE },
     { sinf,      -2.0,                   -0.909297426,    TOLERANCE },
     { sinf,       3.14159265/6.0,         0.5,            TOLERANCE },
     { sinf,       3.14159265+2.0,        -0.909297426,    TOLERANCE },
-    #   endif
     #endif
+
     #if SINHF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC sinhf
     { sinhf,      1.0,                    1.175201193,    TOLERANCE },
     { sinhf,     -2.0,                   -3.626860407,    TOLERANCE },
     { sinhf,      3.14159265/6.0,         0.547853473,    TOLERANCE },
     { sinhf,      3.14159265+2.0,        85.49101383,     TOLERANCE },
-    #   endif
     #endif
+
     #if ASINF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC asinf
     { asinf,      0.5,                    3.14159265/6.0, TOLERANCE },
     { asinf,      0.99749498,             1.5,            TOLERANCE },
     { asinf,     -0.84147098,            -1.0,            TOLERANCE },
     { asinf,      0.29552020,             0.3,            TOLERANCE },
-    #   endif
     #endif
 
-
     #if COSF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC cosf
     { cosf,       1.0,                    0.540302305,    TOLERANCE },
     { cosf,       2.0,                   -0.416146836,    TOLERANCE },
     { cosf,       3.14159265/3.0,         0.5,            TOLERANCE },
     { cosf,       3.14159265+2.0,        +0.416146836,    TOLERANCE },
-    #    endif
     #endif
+
     #if COSHF
+    #define _FUNC coshf
     { coshf,      1.0,                    1.543080634,    TOLERANCE },
     { coshf,      2.0,                    3.7621956910,   TOLERANCE },
     { coshf,      3.0,                   10.06766199,     TOLERANCE },
     { coshf,      4.0,                   27.30823283,     TOLERANCE },
     #endif
+
     #if ACOSF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC acosf
     { acosf,      0.1,                    1.470628905,    TOLERANCE },
     { acosf,      0.5,                    1.047197551,    TOLERANCE },
     { acosf,     -0.9,                    2.690565841,    TOLERANCE },
     { acosf,      0.999,                  0.044725087,    TOLERANCE },
-    #   endif
     #endif
 
-
     #if TANF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC tanf
     { tanf,       1.0,                    1.557407724,    TOLERANCE },
     { tanf,       2.0,                   -2.18503986,     TOLERANCE },
     { tanf,       -1.5,                 -14.10141994,     TOLERANCE },
-    #   endif
     #endif
+
     #if TANHF
+    #define _FUNC tanhf
     { tanhf,      1.0,                    0.761594155,    TOLERANCE },
     { tanhf,      3.800201167,            0.999,          TOLERANCE },
     { tanhf,      1.5,                    0.905148253,    TOLERANCE },
     #endif
+
     #if ATANF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC atanf
     { atanf,      1.0,                    0.7853981633,   TOLERANCE },
     { atanf,      -2.0,                  -1.1071487177,   TOLERANCE },
     { atanf,      42.0,                   1.5469913006,   TOLERANCE },
-    #   endif
     #endif
 
-
     #if SQRTF
+    #define _FUNC sqrtf
     { sqrtf,      5.0,                    2.23606801,     TOLERANCE },
     { sqrtf,      1522756.0,           1234.0,            TOLERANCE },
     { sqrtf,      10000.0,              100.0,            TOLERANCE },
     #endif
 
-
     #if EXPF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC expf
     { expf,       2.30258509,            10.0,            TOLERANCE },
     { expf,       4.82028150,           124.0,            TOLERANCE },
     { expf,      10.0,                22026.46579,        TOLERANCE },
-    #   endif
     #endif
+
     #if LOGF
+    #define _FUNC logf
     { logf,       2.06115362e-9,        -20.0,            TOLERANCE },
     { logf,      10.0,                    2.30258509,     TOLERANCE },
     { logf,     124.0,                    4.82028150,     TOLERANCE },
     { logf,   22026.46579,               10.0,            TOLERANCE },
     #endif
+
     #if LOG10F
+    #define _FUNC log10f
     { log10f,     0.000001,              -6.0,            TOLERANCE },
     { log10f,     3.16227766e-4,         -3.5,            TOLERANCE },
     { log10f,     3.16227766,             0.5,            TOLERANCE },
@@ -174,45 +148,35 @@ static const testpoint[] =
     { log10f,    1E6,                     6.0,            TOLERANCE },
     #endif
 
-
     #if FLOORF
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
+    #define _FUNC floorf
     { floorf,     1.0+0.000001,           1.0,            TOLERANCE },
     { floorf,     1.0-0.000001,           0.0,            TOLERANCE },
     { floorf,     1.0-0.000001,          -0.0,            TOLERANCE },
     { floorf,    -1.0+0.000001,          -1.0,            TOLERANCE },
     { floorf,    -1.0-0.000001,          -2.0,            TOLERANCE },
-    #   endif
     #endif
 
-
     #if CEILF
+    #define _FUNC ceilf
     { ceilf,      1.0+0.000001,           2.0,            TOLERANCE },
     { ceilf,      1.0-0.000001,           1.0,            TOLERANCE },
     { ceilf,     -1.0+0.000001,           0.0,            TOLERANCE },
     { ceilf,     -1.0-0.000001,          -1.0,            TOLERANCE },
     #endif
 
-
     #if FABSF
+    #define _FUNC fabsf
     { fabsf,     -1.0e-20,                1.0e-20,        TOLERANCE },
     { fabsf,      9999999,                9999999,        TOLERANCE },
     #endif
 
-
     #if NEG
-    #   if {func}_DISABLED
-    #       warning {func} disabled
-    { dummy,      0.0,                    0.0,            TOLERANCE },
-    #   else
-    { neg,        0.0,                   -0.0,            TOLERANCE },
-    { dummy,      0.0,                   -0.0,            TOLERANCE },
-    #   endif
+    #define _FUNC neg
+    { neg, 0.0,         -0.0,            TOLERANCE },
+    { neg, 1.0,         -1.0,            TOLERANCE },
+    { neg, -17.0,       17.0,            TOLERANCE },
     #endif
-
 };
 #endif
 
@@ -225,8 +189,12 @@ testFloat (void)
 
   for ( i = 0; i < sizeof testpoint / sizeof testpoint[0]; i++ )
     {
-      result = testpoint[i].f (testpoint[i].arg);
-
+#ifdef _FLOAT_NON_REENTRANT
+      result = _FUNC (testpoint[i].arg);
+#else
+      result = ((float_test_func)testpoint[i].f) (testpoint[i].arg);
+#endif
+      
       rel_error = testpoint[i].result ? result/testpoint[i].result - 1.0 : result;
 
       DEBUG (printf ("Test No: %d f(%f) = %f should: %f rel_error: %f %s\n",
